タイトルを変えました

--- a/dropAndDrag/index.html
+++ b/dropAndDrag/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ドラックアンドドロップテスト</title>
+	<title>ドラッグアンドドロップテスト</title>
 	<link rel="stylesheet" type="text/css" href="common/stylesheets/index.css">
 </head>
 <body>
