divを追加しました

--- a/dropAndDrag/index.html
+++ b/dropAndDrag/index.html
@@ -18,6 +18,17 @@
 	<div class="box3 showDiv"></div>
 	<div class="box4 showDiv"></div>
 	<div class="box5 showDiv"></div>
+	<div class="box1 dragDiv"><p>Div1</p></div>
+	<div class="box2 dragDiv"><p>Div2</p></div>
+	<div class="box3 dragDiv"><p>Div3</p></div>
+	<div class="box4 dragDiv"><p>Div4</p></div>
+	<div class="box5 dragDiv"><p>Div5</p></div>
+	<div class="dastBox"></div>
+	<div class="box1 showDiv"></div>
+	<div class="box2 showDiv"></div>
+	<div class="box3 showDiv"></div>
+	<div class="box4 showDiv"></div>
+	<div class="box5 showDiv"></div>
 
 
 <script type="text/javascript" src="common/js/jquery-1.12.1.min.js"></script>
