--- a/dropAndDrag/index.html
+++ b/dropAndDrag/index.html
@@ -8,7 +8,7 @@
 <body>
 	
 	<div class="box1 dragDiv"><p>Div1</p></div>
-
+	<div class="tesuto"></div>
 
 
 <script type="text/javascript" src="common/js/jquery-1.12.1.min.js"></script>
