clickフォルダ追加

--- a/test/clickAndIif/if.html
+++ b/test/clickAndIif/if.html
@@ -9,13 +9,18 @@
 
 
 <ul class="btn">
-	<li></li>
-	<li></li>
-	<li></li>
+	<li>追加</li>
+	<li>追加</li>
+	<li>追加</li>
 	<li></li>
 	<li></li>
 </ul>
-
+<ul>
+	<li class="test"><a href="">テスト01</a></li>
+	<li class="test"><a href="">テスト02</a></li>
+	<li class="test"><a href="">テスト03</a></li>
+	<li class="test"><a href="">テスト04</a></li>
+</ul>
 
 <div class="box"></div>
 <div class="box"></div>
